--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+torch==2.1.2+cpu
 python-telegram-bot==20.7
 transformers==4.41.2
-torch==2.1.2
